# vt-transformer

./: .gitignore  LICENSE  README.md  build_env.sh  run.sh
docs/: DAG_reference.md  new_platform.md  porting_model.md
examples/7b_chat2/: common.words  inference.words
examples/7b_chat_q/: Makefile  chat.cpp  common.words  inference.words
examples/repl/: 256x256.fp16  Makefile  Makefile.dcu  linear2d_q.dag  quantize_q4.dag
examples/tokenizer/: Makefile  tokenizer.cpp
install/include/: tensortype_inc.hpp  vt.hpp
models/llama3/: Makefile.cuda  chat.cpp  debug.py  dump_from_huggingface.py  inference_fp16.dag  tokenizer_convert.py
models/minicpm2.6/: chat.cpp  dump_from_huggingface.py  inference_fp16.dag  memory.hpp  visual_fp16.dag
models/qwen/: common.words
models/qwen-1.8b/: Makefile.corex  Makefile.cuda  bench.cpp  chat.cpp  inference_fp16.dag  inference_fp32.dag  memory.hpp
models/qwen-14b/: Makefile  Makefile.cuda  Makefile.dcu  chat.cpp  inference.words  inference_pq.dag
models/qwen-72b/: Makefile.cuda  chat.cpp  debug_layer.py  dump_from_huggingface.py  inference_check.dag  inference_q4.dag  memory.hpp  quantize_q4.dag
models/qwen-7b/: Makefile.cuda  Makefile.dcu  README.md  bench.cpp  chat.cpp  inference_fp16.dag  inference_pq.dag  inference_q4.dag  memory.hpp
models/qwen-vl/: Makefile.corex  Makefile.cuda  chat.cpp  debug.py  dump_from_huggingface.py  http.cpp  inference_fp16.dag  memory.hpp  visual_fp16.dag
models/qwen1.5-0.5b/: Makefile.cuda  chat.cpp  debug.py  dump_from_huggingface.py  inference_fp16.dag  memory.hpp  tokenizer_convert.py
models/qwen1.5-1.8b/: Makefile.android  Makefile.cuda  Makefile.dnnl  chat.cpp  dump_from_huggingface.py  fp16_to_q8.dag  inference_fp16.dag  inference_fp32.dag  inference_q8.dag  memory.hpp  qwen.tiktoken
models/qwen1.5-7b/: Makefile.corex  Makefile.cuda  Makefile.hip  bench.cpp  chat.cpp  dump_from_huggingface.py  http.cpp  inference_fp16.dag
models/qwen2-72b/: chat.cpp  convert_q4.dag  dump_from_safetensors.py  inference_q4.dag  memory.hpp
models/qwen2-7b/: Makefile.cuda  convert_q4.dag  http.cpp  memory.hpp
models/qwen2-7b/www/: chat.css  index.html  index.js
models/qwen2.5-7b/: dump_from_huggingface.py  inference_fp16.dag
sglfront/: .gitignore  README.md  pyproject.toml
sglfront/docs/: protocol.md
sglfront/sglfront/: __main__.py  core.py  env.py
sglfront/sglfront/message/: __init__.py  backend.py  frontend.py  tokenizer.py  utils.py
sglfront/sglfront/server/: __init__.py  api_server.py  args.py  launch.py
sglfront/sglfront/tokenizer/: __init__.py  detokenize.py  server.py  tokenize.py
sglfront/sglfront/utils/: __init__.py  hf.py  logger.py  mp.py
tensortype/: Makefile  Makefile.android  Makefile.corex  Makefile.cuda  Makefile.dcu  Makefile.dnnl  Makefile.hip  acl_tensor.cpp  acl_tensor.hpp  common.cpp  common.hpp  computing.hpp  context.cpp  context.hpp  corex_tensor.cpp  corex_tensor.hpp  cuda_tensor.cpp  cuda_tensor.hpp  dag.cpp  dag.hpp  dcu_tensor.cpp  dcu_tensor.hpp  dnnl_tensor.cpp  dnnl_tensor.hpp  hip_tensor.cpp  hip_tensor.hpp  host_tensor.cpp  host_tensor.hpp  nn_kvcache.cpp  nn_operators.cpp  tensortype.cpp  tensortype.hpp  tensortype_inc.hpp
tensortype/acl_kernels/: impl.hpp
tensortype/corex_kernels/: Makefile  add_bias.cu  block_reduce.hpp  causal_mask.cu  convert.cu  corex_kernels.hpp  embed.cu  fill.cu  gelu.cu  layernorm.cu  pointwise.cu  quantize.cu  quantize.hpp  rmsnorm.cu  rotary_embed.cu  sampling.cu  silu_product.cu  softmax.cu  transpose_0213.cu
tensortype/cuda_kernels/: CMakeLists.txt  Makefile  causal_mask.cu  cuda_kernels.hpp  easy_sampling.cu  gelu.cu  help_common.h  kernels.hpp  rmsnorm.cu  rotary_embed.cu  transpose_0213.cu
tensortype/cuda_kernels/bitsandbytes/: CMakeLists.txt
tensortype/cuda_kernels/bitsandbytes/csrc/: bitsandbytes.cpp  bitsandbytes.hpp
tensortype/cuda_kernels/blackriver/: LtSgemm.cu  LtSgemmBatched.cu  easy_sampling.cu  embed.cu  flash_attention.cu  gelu.cu  linear2d_q.cu  misc.cu  nll_loss.cu  quantize.cu  quantize.hpp  rms_norm.cu
tensortype/cuda_kernels/lightseq/: cuda_util.cu  normalize_kernels.cu
tensortype/cuda_kernels/lightseq/includes/: block_reduce.h
tensortype/dcu_kernels/: Makefile  add_bias.cpp  block_reduce.hpp  causal_mask.cpp  convert.cpp  dcu_kernels.hpp  embed.cpp  fill.cpp  gelu.cpp  kr_fill.cpp  layernorm.cpp  pointwise.cpp  quantize.cpp  quantize.hpp  rmsnorm.cpp  rotary_embed.cpp  sampling.cpp  silu_product.cpp  softmax.cpp  transpose_0213.cpp
tensortype/dnnl_kernels/: cl_kernels.cpp  cl_kernels.hpp  code.cl  impl.hpp  misc.hpp
tensortype/hip_kernels/: Makefile  block_reduce.hpp  causal_mask.cpp  convert.cpp  embed.cpp  fill.cpp  gelu.cpp  hip_kernels.hpp  pointwise.cpp  rotary_embed.cpp  sampling.cpp  softmax.cpp  transpose_0213.cpp
tokenizers.combo/: Makefile  Makefile.android  baichuan.cpp  bloomz.cpp  image.cpp  image_c.h  llama3.cpp  minicpm.cpp  qwen.cpp  tiktoken_c.h  tokenizer_combo.hpp
tokenizers.combo/rust/: Cargo.toml
tokenizers.combo/rust/src/: lib.rs  tiktoken.rs  tokenizers_wrapper.rs
tools/pq/: Makefile  pq.cpp
tools/pq/dkm/: dkm.hpp  dkm_parallel.hpp
tools/repl/: Makefile.android  Makefile.corex  Makefile.cuda  Makefile.dnnl  Makefile.hip  conv2d.dag  quantize_q4.dag  repl.cpp
tools/tokenizer/: Makefile  image.cpp
v1/: .gitignore  build_env.sh
v1/models/llama3/: chat.cpp  (+5 more)
v1/tensortype/: Makefile.cuda  common.cpp  common.hpp  context.hpp  cuda_tensor.hpp  dag.hpp  host_tensor.hpp  tensortype.cpp  tensortype.hpp
v1/tokenizers.combo/: Makefile  image_c.h  llama3.cpp  minicpm.cpp
vt-transformer/: .gitignore  vt.cpp  vt.hpp
vt-transformer/core/: cache.hpp  config.hpp  decode.hpp  forward.hpp  message.hpp  pinned_allocator.hpp  prefill.hpp  radix.hpp  req.hpp  safetensors.hpp  schedule.cpp  schedule.hpp  sync.hpp  table.hpp  vt.cpp  vt.hpp  vt_cuda.cpp  vt_cuda.hpp
vt-transformer/models/qwen3-0.6b/verify/: pyproject.toml  reference.py
vt-transformer/opt/: zmq.hpp
vt-transformer/test/: radix_test.cpp  safetensors_test.cpp  schedule_test.cpp  vt_test.cpp
(+59 files in other folders)
