[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglfront"
version = "0.1.0"
description = "Standalone frontend (HTTP API + tokenizer/detokenizer) for Mini-SGLang's MQ protocol. Talks to any backend that implements the same ZMQ + msgpack protocol."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "msgpack",
    "pyzmq",
    "torch",
    "transformers>=4.56.0,<=4.57.3",
    "huggingface_hub",
    "uvicorn",
    "fastapi",
    "prompt_toolkit",
    "openai",
    "psutil",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "ruff>=0.11.0",
]

[project.scripts]
sglfront = "sglfront.server:launch_frontend"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sglfront*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "W",
    "F",
    "I",
    "C4",
]
lint.ignore = [
    "E501",
    "B008",
    "C901",
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
