[project]
name = "qwen3-verify"
version = "0.1.0"
description = "Eager-mode reference forward for Qwen3-0.6B; dumps intermediate activations for cross-checking the C++/CUDA port."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.51",   # Qwen3 support landed in 4.51
    "numpy>=1.26",
    "safetensors>=0.4",
]
